[impl] add schema symbol to Agg